--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="allUsers.css">
 
 </head>
-<body>
+<style>
+    .body {
+    background-color: #DCBABA;}
+    }
+</style>
+<body class="body">
 
 <div >
     <h1> All Users</h1>
