--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="allUsers.css">
 
 </head>
-<body>
+<style>
+    .body {
+    background-color: #DCBABA;}
+    }
+</style>
+<body class="body">
 <div >
     <div style="width: 18rem;" th:each="follower:${Allfollowing}">
         <div>
