--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,54 @@
+
+
+
 <!DOCTYPE html>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="login.css">
 
 </head>
-<body>
+<style>
+.body{
+background-color: #DCBABA;}
+.title {
 
-<h1>please Sign in... </h1>
-<div>
-    <form action="/perform_login" method="post" class="signin" >
+background-color: #1F1F1F;
+color: white;
+text-align: center;
+height: 50px;
+}
+.signin{
+
+width:60%;
+margin-left: 20%;
+
+}
+</style>
+
+<h1 class="title">Sign in here</h1>
+<body class="body">
+
+<form action="/perform_login" method="POST" class="signin">
+    <div class="form-group">
         <label for="username">User Name</label>
-        <input id="username" name="username" type="text"/>
+        <input id="username" name="username" type="text" class="form-control"  aria-describedby="emailHelp">
+
+    </div>
+
+    <div class="form-group">
         <label for="password">Password</label>
-        <input id="password" name="password" type="password"/>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-</div>
+        <input id="password" name="password" type="password" class="form-control"  aria-describedby="emailHelp">
+
+    </div>
+
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
 
 </body>
 </html>
+
