--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,37 +1,87 @@
 <!DOCTYPE html>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="signup.css">
+
 </head>
-<body>
-<h1>please Sign up... </h1>
 
-<form action="/signup"  method="post" class="signup" >
-    <label for="username">User Name</label>
-    <input id="username" name="username" type="text" />
-    <br/>
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password" />
-    <br/>
-    <label for="firstName">First Name</label>
-    <input id="firstName" name="firstName" type="text" />
-    <br/>
-    <label for="lastName">Last Name</label>
-    <input id="lastName" name="lastName" type="text" />
-    <br/>
-    <label for="dateOfBirth">Date Of Birth</label>
-    <input id="dateOfBirth" name="dateOfBirth" type="date" />
-    <br/>
-    <label for="bio">bio</label>
-    <input id="bio" name="bio" type="text" />
-    <br/>
+<style>
 
-    <button type="submit">Sign up</button>
+.body{
+    background-color: #DCBABA;}
+     .title {
+
+       background-color: #1F1F1F;
+    color: white;
+    text-align: center;
+    height: 50px;
+        }
+
+        .signup{
+
+        width:60%;
+        margin-left: 20%;
+
+        }
+</style>
+<body class="body">
+
+<h1 class="title">Sign up here</h1>
+
+<form method="POST" action="/signup" class="signup">
+    <div class="form-group" >
+        <label for="username">User Name</label>
+        <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="username" name="username">
+        <small  class="form-text text-muted">User Name</small>
+    </div>
+
+
+
+    <div class="form-group" >
+        <label for="password">Password</label>
+        <input type="text" class="form-control" id="password" aria-describedby="emailHelp" placeholder="password" name="password">
+        <small  class="form-text text-muted">password</small>
+    </div>
+
+
+    <div class="form-group" >
+        <label for="firstName">First name</label>
+        <input type="text" class="form-control" id="firstName" aria-describedby="emailHelp" placeholder="firstName" name="firstName">
+        <small  class="form-text text-muted">firstName</small>
+    </div>
+
+
+    <div class="form-group" >
+        <label for="lastName">Last name</label>
+        <input type="text" class="form-control" id="lastName" aria-describedby="emailHelp" placeholder="lastName" name="lastName">
+        <small  class="form-text text-muted">Last Name</small>
+    </div>
+
+    <div class="form-group" >
+        <label for="dateOfBirth">Date Of Birth</label>
+        <input type="text" class="form-control" id="dateOfBirth" aria-describedby="emailHelp" placeholder="dateOfBirth" name="dateOfBirth">
+        <small  class="form-text text-muted">Date Of Birth</small>
+    </div>
+
+    <div class="form-group" >
+        <label for="bio">bio</label>
+        <input type="text" class="form-control" id="bio" aria-describedby="emailHelp" placeholder="bio" name="bio">
+        <small  class="form-text text-muted">A brief Bio</small>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 
 
 </body>
 </html>
+
+
+
+</body>
+</html>
+
+
