--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,49 +1,131 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="post.css">
 
 </head>
-<body>
 
-<div>
-    <h1>User Profile</h1>
-    <h2>Name</h2>
-    <p th:text="${allUserData.username}"></p>
-    <h2>Date of birth</h2>
-    <p th:text="${allUserData.dateOfBirth}"></p>
-    <h2>bio</h2>
-    <p th:text="${allUserData.bio}"></p>
-</div>
+<style>
+.body{
+background-color: #DCBABA;}
+.title {
+
+background-color: #1F1F1F;
+color: white;
+text-align: center;
+height: 50px;
+}
+.signin{
+
+width:60%;
+margin-left: 20%;
+
+}
+.toFlex {
+display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 
 
-<a href="/allUsers"> See All Users </a>
+}
+</style>
+
+<body class="body">
 
 
-<form action="/userprofile" method="post">
 
-    <h1>Add a posts</h1>
-    <input type="text" name="body" id="body"/> <br/>
-    <div class="postButton">
-        <button type="submit">post</button>
+
+
+
+
+
+
+
+<header class="title">
+    <div class="home">
+
+
+        <h1 class="title">Profile</h1>
+        <ul class="nav navbar-nav">
+
+
+
+
+
+
+        </ul>
+
+
     </div>
-</form>
+</header>
+
+<a href="/allUsers"> Other Users </a>
 
 
-<div>
-    <h3>User Posts</h3>
-    <div  th:each="post:${allUserData.post}">
-        <div >
-            <h5  th:text="${'post' + post.id}"></h5>
-            <h6  th:text="${post.createdAt}"></h6>
-            <p  th:text="${post.body}"></p>
+
+<div class="row">
+    <div class="col" >
+        <div class="card" style="width: 18rem;">
+            <!--            <img th:src="${song.album.imageUrl}" class="card-img-top" alt="album image">-->
+
+            <div class="card-body">
+                <h5 class="card-title" th:text="${allUserData.username}"></h5>
+                <div class="card-text">
+                    <p th:text="${allUserData.dateOfBirth}"></p>
+                    <p th:text="${allUserData.bio}"></p>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
 
 
+
+
+
+
+
+
+
+
+
+
+<form action="/myprofile" method="post" class="signin">
+    <div class="form-group">
+        <label for="body">Add a post</label>
+        <input type="text" name="body" id="body" class="form-control"  aria-describedby="emailHelp">
+
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+
+<div class="toFlex">
+
+<div class="row">
+    <div class="col" >
+        <div class="card" style="width: 18rem;" th:each="post:${allUserData.post}">
+
+
+            <div class="card-body">
+                <h5 class="card-title"th:text="${'post' + post.id}"></h5>
+                <div class="card-text">
+                    <p th:text="${post.body}"></p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+</div>
 
 </body>
 </html>
